# agent_auto_system

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  prometheus.yml  pyproject.toml
.github/workflows/: ci.yml
agent-auto-system-stack/: .gitignore  README.md  cdk.context.json  cdk.json  package-lock.json  package.json
agent-auto-system-stack/lib/: agent-auto-system-stack-stack.ts
agent-auto-system-stack/test/: agent-auto-system-stack.test.ts
design/: finlab.md
doc/: auth-and-admin-design.md  aws-ecs-fargate-deployment.md  debug.md  design.md  dev-notes.md  docker.md  improvements.md  profit-health-check-design.md
doc/email_collect/: README.md
scripts/: shopee_login.py  tasker_login.py
shopee/sample_data/: SCENARIOS.md  _generate_scenarios.py
shopee/sample_data/scenario_1_healthy/: ads_discount.csv  product_cost.csv  sales_report.csv
shopee/sample_data/scenario_2_ad_burn/: ads_discount.csv  order_return_refund.csv  product_cost.csv  sales_report.csv
src/: auth.py  database.py  main.py  models.py  settings_store.py  telemetry.py
src/automation/: executor.py  pipeline.py  profit_health_schema.py  progress.py  registry.py  report_render.py
src/routers/: admin.py  auth.py  jobs.py  runs.py  system.py  uploads.py
tests/: conftest.py
tests/e2e/: test_form_fill.py
tests/integration/: test_admin_api.py  test_auth_api.py  test_bulk_delete_stats.py  test_db.py  test_jobs_api.py  test_run_scoping.py  test_runs_api.py  test_system_api.py  test_uploads_api.py
tests/unit/: test_auth.py  test_email_collect_flow.py  test_email_collect_tools.py  test_email_flow.py  test_evaluator.py  test_executor.py  test_flow.py  test_form_tool.py  test_gmail_send_tool.py  test_google_sheet_flow.py  test_google_sheet_tool.py  test_harness.py  test_hn_digest_flow.py  test_langfuse_tracer.py  test_lead_collect_flow.py  test_models.py  test_pipeline.py  test_profit_calc.py  test_profit_health_flow.py  test_report_render.py  test_settings_store.py  test_tasker_apply_flow.py  test_tasker_apply_tool.py  test_web_scraper_flow.py  test_web_scraper_tool.py  test_x_scraper_flow.py
ui/: app.js  index.html  styles.css
(+75 files in other folders)
