[project]
name = "agent-auto-system"
version = "0.1.0"
description = "CrewAI-powered automation platform"
requires-python = ">=3.11"
dependencies = [
    "crewai[tools,google-genai]>=0.80.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlmodel>=0.0.21",
    "playwright>=1.44.0",
    "weasyprint>=60.0",
    "python-dotenv>=1.0.0",
    "openai>=1.30.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "opentelemetry-exporter-prometheus>=0.41b0",
    "prometheus-client>=0.19.0",
    "bcrypt>=5.0.0",
    "itsdangerous>=2.2.0",
    "cryptography>=48.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "anyio[trio]>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["e2e: end-to-end tests requiring real browser and API keys"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = false
